Fix UOE of AnalysisOptions
(cherry picked from commit 2c5ee419b7c48ba482a40f46927a7c72b33f637b)